--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,7 +2,7 @@ const path = require("path");
 
 //Segundo passo é configurar o sequelize, nesse caso estamos dizendo onde está a config para a conexão com o postgres, pois não é no path padrão do sequelize.
 module.exports = {
-  config: path.resolve("config", "sequelizeCli.js"),
+  config: path.resolve("./src/config", "sequelizeCli.js"),
   "models-path": path.resolve("src", "models"),
   "seeders-path": path.resolve("src", "database", "seeders"),
   "migrations-path": path.resolve("src", "database", "migrations"),
