--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react"
+    "jsx": "react",
+    "rootDir": "./src",
+    "outDir": "./dist"
   }
 }
